GNOME Bugzilla – Bug 751213
tools: gst-play: fix seeking issue
Last modified: 2015-06-19 15:06:47 UTC
For positive seeking segment.stop value will be -1, when we change rate to -1, then the stop value will be udpated with the current position. And then again if we change rate to 1, the segment.stop value does not get updated and remains as position where we last changed rate to -1. Hence playback stops at that point. In case of positive rates, call gst_element_new_seek with correct values
Created attachment 305677 [details] [review] fix seek issue
Review of attachment 305677 [details] [review]: Thanks. commit eec791a37fd9d58d3b6f283f7b606047b4a32dba Author: Vineeth T M <vineeth.tm@samsung.com> Date: Fri Jun 19 19:51:25 2015 +0900 tools: gst-play: fix seeking issue